# votacao-caesi

./: CHANGELOG.md  LICENSE  README.md  estudantes.csv  votacao-caesi.cabal
LocalDB/: ConnectionDB.hs
app/: Main.hs  Utils.hs
app/Controllers/: :wq.hs  AdminController.hs  ChapaController.hs  EstudanteController.hs  VotacaoController.hs
app/LocalDB/: ConnectionDB.hs
app/Models/: Admin.hs  Chapa.hs  Estudante.hs  Votacao.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
funcional/app/Controllers/: EstudanteController.hs
funcional/app/LocalDB/: ConnectionDB.hs
funcional/app/Models/: Admin.hs  Chapa.hs  Estudante.hs
logico/: Main.pl  Utils.pl
logico/Controller/: AdminController.pl  ChapaController.pl  EstudanteController.pl  VotacaoController.pl
logico/Dados/: admin.csv  chapa.csv  estudante.csv  estudanteChapa.csv  votacao.csv  voto.csv
logico/Models/: Admin.pl  Chapa.pl  Estudante.pl  Votacao.pl
