cabal-version:      2.4
name:               votacao-caesi
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             emys-alb
maintainer:         emilly.oliveira@ccc.ufcg.edu.br

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable votacao-caesi
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0,
                      postgresql-simple ^>=0.6.4,
                      bytestring ^>= 0.10.12.0,
                      cassava,
                      vector ^>= 0.12.3.1,
                      directory ^>= 1.3.6.0
    hs-source-dirs:   app
    default-language: Haskell2010
    other-modules:    LocalDB.ConnectionDB
                      Models.Admin
                      Models.Estudante  
                      Models.Votacao 
                      Controllers.AdminController
                      Controllers.EstudanteController
                      Utils

